--- a/Task1/Views/Menutama/Profile/CellTableViewCell.xib
+++ b/Task1/Views/Menutama/Profile/CellTableViewCell.xib
@@ -19,6 +19,7 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yCs-k9-clo">
                         <rect key="frame" x="20" y="14" width="60" height="60"/>
                         <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="2Us-6T-sbd"/>
                             <constraint firstAttribute="width" constant="60" id="SO6-PA-S1c"/>
                             <constraint firstAttribute="height" constant="60" id="hh0-ap-Y4i"/>
                         </constraints>
@@ -54,6 +55,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="bgCell" destination="H2p-sc-9uM" id="84k-hh-l98"/>
                 <outlet property="descCell" destination="0P4-KO-2Ka" id="9GB-Cl-VCb"/>
                 <outlet property="imageCell" destination="yCs-k9-clo" id="hBO-0e-zl0"/>
                 <outlet property="titleCell" destination="QYa-yz-DLj" id="FiG-lh-npp"/>
